--- a/docs/styles/jsdoc.css
+++ b/docs/styles/jsdoc.css
@@ -242,11 +242,14 @@ nav > h2 > a {
 
 footer {
   color: hsl(0, 0%, 28%);
-  margin-left: 250px;
+  margin-left: 310px;
   display: block;
   padding: 15px;
   font-style: italic;
   font-size: 90%;
+  opacity: .3;
+  text-align: center;
+  font-size: 11px;
 }
 
 .ancestors {
@@ -662,5 +665,11 @@ span.param-type, .params td .param-type, .param-type dd {
 article img {
   max-width: 100%;
   padding: 10px;
+  border: 1px solid #efefef;
+}
+
+iframe {
+  border: none;
+  max-width: 100%;
   border: 1px solid #efefef;
 }
