--- a/docdash/static/styles/jsdoc.css
+++ b/docdash/static/styles/jsdoc.css
@@ -242,11 +242,14 @@ nav > h2 > a {
 
 footer {
   color: hsl(0, 0%, 28%);
-  margin-left: 250px;
+  margin-left: 310px;
   display: block;
   padding: 15px;
   font-style: italic;
   font-size: 90%;
+  opacity: .3;
+  text-align: center;
+  font-size: 11px;
 }
 
 .ancestors {
@@ -663,4 +666,9 @@ article img {
   max-width: 100%;
   padding: 10px;
   border: 1px solid #efefef;
+}
+
+iframe {
+  border: 3px dashed #efefef;
+  max-width: 100%;
 }
