document on, onany, off, once methods

--- a/docdash/tmpl/container.tmpl
+++ b/docdash/tmpl/container.tmpl
@@ -142,7 +142,7 @@
 
 
         <?js methods.forEach(function(m) { ?>
-            <?js if(isGlobalPage && m.id.indexOf('module:') == -1) { ?>
+            <?js if(!isGlobalPage || m.id.indexOf('module:') == -1) { ?>
             <?js= self.partial('method.tmpl', m) ?>
         <?js } }); ?>
     <?js } ?>
