--- a/docdash/tmpl/members.tmpl
+++ b/docdash/tmpl/members.tmpl
@@ -5,7 +5,7 @@ var self = this;
 
 <h4 class="name" id="<?js= id ?>">
 
-<?js= data.attribs + name.replace('"."', '.') + (data.signature ? data.signature : '') ?></h4>
+<?js= data.attribs + name.replace(/"/g,"") + (data.signature ? data.signature : '') ?></h4>
 
 <?js if (data.summary) { ?>
 <p class="summary"><?js= summary ?></p>
