--- a/docdash/tmpl/method.tmpl
+++ b/docdash/tmpl/method.tmpl
@@ -9,7 +9,7 @@ var self = this;
     <h4 class="name" id="<?js= id ?>">
 
     <?js= data.attribs + (kind === 'class' ? 'new ' : '') +
-    name.replace('"."', '.') + (data.signature || '') ?></h4>
+    name.replace(/"/g,"") + (data.signature || '') ?></h4>
 
     <?js if (data.summary) { ?>
     <p class="summary"><?js= summary ?></p>
@@ -65,7 +65,7 @@ var self = this;
 <ul><?js fires.forEach(function(f) {
 
     f;
-    g = f.split(':')[1].replace('"."', '.');
+    g = f.split(':')[1].replace(/"/g,"");
     ?>
     <li><?js= self.linkto(f, g) ?></li>
 <?js }); ?></ul>
